test/langtools/tools/javac/valhalla/primitive-classes/CheckFeatureGate2.out
CheckFeatureGate2.java:11:17: compiler.err.feature.not.supported.in.source.plural: (compiler.misc.feature.value.classes), 13, 21
1 error
